--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   rust_builder:
     path: rust_builder
   flutter_rust_bridge: 2.0.0-dev.21
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
