--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   rust_builder:
     path: rust_builder
-  flutter_rust_bridge: 2.0.0-dev.21
+  flutter_rust_bridge: 2.0.0-dev.22
   provider: ^6.0.0
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -49,9 +50,11 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
   integration_test:
     sdk: flutter
+  freezed: ^2.4.1
+  build_runner: ^2.4.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
