--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
 name = "rust_lib"
 version = "0.1.0"
+authors = ["The Appgineer"]
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-flutter_rust_bridge = "=2.0.0-dev.21"
+flutter_rust_bridge = "=2.0.0-dev.22"
+log = "0.4"
 once_cell = "1.19"
+roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "f1ce520", features = ["browse", "transport"] }
+serde_json = "1.0.112"
+simple-logging = "2.0"
+tokio = { version = "1.24.1", features = ["macros"] }
