--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib", "staticlib"]
 flutter_rust_bridge = "=2.0.0-dev.22"
 log = "0.4"
 once_cell = "1.19"
-roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "f1ce520", features = ["browse", "transport"] }
+roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "4ea97ae", features = ["browse", "image", "transport"] }
 serde_json = "1.0.112"
 simple-logging = "2.0"
 tokio = { version = "1.24.1", features = ["macros"] }
