--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2021"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-flutter_rust_bridge = "=2.0.0-dev.24"
+flutter_rust_bridge = "=2.0.0-dev.25"
 log = "0.4"
 once_cell = "1.19"
 roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "77cf53c", features = ["browse", "image", "transport"] }
-serde_json = "1.0.112"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 simple-logging = "2.0"
 tokio = { version = "1.24.1", features = ["macros"] }
