--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  material_symbols_icons: ^4.2719.1
   rust_builder:
     path: rust_builder
   flutter_rust_bridge: 2.0.0-dev.25
