--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,7 +11,8 @@ crate-type = ["cdylib", "staticlib"]
 flutter_rust_bridge = "=2.0.0-dev.28"
 log = "0.4"
 once_cell = "1.19"
-roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "77cf53c", features = ["browse", "image", "transport"] }
+rand = "0.8.5"
+roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "2589b2b", features = ["browse", "image", "transport"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simple-logging = "2.0"
