--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
+chrono = { version = "0.4", features = ["clock"], default-features = false }
 flutter_rust_bridge = "=2.0.0-dev.28"
 log = "0.4"
 once_cell = "1.19"
@@ -15,5 +16,6 @@ rand = "0.8.5"
 roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "2589b2b", features = ["browse", "image", "transport"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-simple-logging = "2.0"
+simplelog = "0.12"
+time = "0.3"
 tokio = { version = "1.24.1", features = ["macros"] }
