--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_rust_bridge: 2.0.0-dev.28
   provider: ^6.0.0
   freezed_annotation: ^2.4.1
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
