--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.0
   freezed_annotation: ^2.4.1
   path_provider: ^2.1.2
+  flutter_android_volume_keydown: ^1.0.0
 
 dev_dependencies:
   flutter_test:
