--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   path_provider: ^2.1.2
   flutter_android_volume_keydown: ^1.0.0
+  mdi: ^5.0.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
