--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.log
 *.pyc
 *.swp
+*.tar.gz
 .DS_Store
 .atom/
 .buildlog/
@@ -43,5 +44,6 @@ app.*.map.json
 /android/app/release
 
 # Project related
+community_remote-linux-x86_64/
 devtools_options.yaml
 config.json
