Update version to 0.0.2. Update dependencies.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "rust_lib"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["The Appgineer"]
 edition = "2021"
+license-file = "LICENSE"
+readme = "README.md"
+repository = "https://github.com/theappgineer/community_remote"
+publish = false
 
 [lib]
 crate-type = ["cdylib", "staticlib"]
@@ -10,7 +14,7 @@ crate-type = ["cdylib", "staticlib"]
 [dependencies]
 anyhow = "1.0.75"
 chrono = { version = "0.4", features = ["clock"], default-features = false }
-flutter_rust_bridge = "=2.0.0-dev.35"
+flutter_rust_bridge = "=2.0.0-dev.37"
 log = "0.4"
 once_cell = "1.19"
 rand = "0.8.5"
