--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.1
+version: 0.0.2
 
 environment:
   sdk: '>=3.2.5 <4.0.0'
@@ -38,12 +38,13 @@ dependencies:
   material_symbols_icons: ^4.2719.1
   rust_builder:
     path: rust_builder
-  flutter_rust_bridge: 2.0.0-dev.35
+  flutter_rust_bridge: 2.0.0-dev.37
   provider: ^6.0.0
   freezed_annotation: ^2.4.1
   path_provider: ^2.1.2
   flutter_android_volume_keydown: ^1.0.0
   mdi: ^5.0.0-nullsafety.0
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
