--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust_lib"
-version = "0.0.4"
+version = "0.0.4-beta1"
 authors = ["The Appgineer"]
 edition = "2021"
 license-file = "LICENSE"
