--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   material_symbols_icons: ^4.2719.1
   rust_builder:
     path: rust_builder
-  flutter_rust_bridge: 2.0.0-dev.39
+  flutter_rust_bridge: 2.0.0
   provider: ^6.0.0
   freezed_annotation: ^2.4.1
   path_provider: ^2.1.2
@@ -55,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
   integration_test:
     sdk: flutter
   freezed: ^2.4.1
