--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust_lib"
-version = "0.0.4-beta4"
+version = "0.0.4"
 authors = ["The Appgineer"]
 edition = "2021"
 license-file = "LICENSE"
@@ -18,7 +18,7 @@ flutter_rust_bridge = "=2.0.0"
 log = "0.4"
 once_cell = "1.19"
 rand = "0.8.5"
-roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "b24a994", features = ["browse", "image", "transport"] }
+roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", tag = "0.2.1", features = ["browse", "image", "transport"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simplelog = "0.12"
