--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.theappgineer" "\0"
+            VALUE "CompanyName", "The Appgineer" "\0"
             VALUE "FileDescription", "community_remote" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "community_remote" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.theappgineer. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 The Appgineer. All rights reserved." "\0"
             VALUE "OriginalFilename", "community_remote.exe" "\0"
-            VALUE "ProductName", "community_remote" "\0"
+            VALUE "ProductName", "Community Remote" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
