--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -18,9 +18,10 @@ flutter_rust_bridge = "=2.1.0"
 log = "0.4"
 once_cell = "1.19"
 rand = "0.8.5"
-roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "8054524", features = ["browse", "image", "transport"] }
+roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", rev = "8054524", features = ["browse", "image", "transport", "settings"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simplelog = "0.12"
 time = "0.3"
 tokio = { version = "1.24.1", features = ["macros"] }
+typetag = "0.2"
