--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -18,6 +18,7 @@ flutter_rust_bridge = "=2.1.0"
 log = "0.4"
 once_cell = "1.19"
 rand = "0.8.5"
+regex = "1.10"
 roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", tag = "0.3.1", features = ["browse", "image", "transport", "settings", "status"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
