--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,10 @@ dependencies:
   provider: ^6.0.0
   freezed_annotation: ^2.4.1
   path_provider: ^2.1.2
-  flutter_android_volume_keydown: ^1.0.0
+  flutter_android_volume_keydown:
+    git:
+      url: https://github.com/JanKoudijs/flutter_android_volume_keydown.git
+      ref: 724769f
   mdi: ^5.0.0-nullsafety.0
   package_info_plus: ^8.0.0
 
