--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -13,9 +13,11 @@ crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1.0"
+any_ascii = "0.3"
 chrono = { version = "0.4", features = ["clock"], default-features = false }
 flutter_rust_bridge = "=2.3.0"
 log = "0.4"
+mediawiki = "0.3"
 once_cell = "1.19"
 rand = "0.8.5"
 regex = "1.10"
