--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -19,9 +19,9 @@ flutter_rust_bridge = "=2.5.0"
 log = "0.4"
 mediawiki = "0.3"
 once_cell = "1.19"
-openssl = { version = "0.10", features = ["vendored"] }
 rand = "0.8.5"
 regex = "1.10"
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"]}
 roon-api = { git = "https://github.com/TheAppgineer/rust-roon-api.git", tag = "0.3.1", features = ["browse", "image", "transport", "settings", "status"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -29,3 +29,6 @@ simplelog = "0.12"
 time = "0.3"
 tokio = { version = "1.24.1", features = ["macros"] }
 typetag = "0.2"
+
+[target.'cfg(unix)'.dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
