--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   mdi: ^5.0.0-nullsafety.0
   package_info_plus: ^8.0.0
   flutter_html: ^3.0.0-beta.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -77,9 +78,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/qr-community-remote-android.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
